--- a/weather/templates/registration/register.html
+++ b/weather/templates/registration/register.html
@@ -65,7 +65,7 @@
 
             <div class="form-group">
                 <label for="location_name" class="block text-sm text-gray-700 dark:text-gray-300 font-medium">Location</label>
-                <input type="text" id="location_name" name="location_name" value="{{ form.location_name.value|default:'' }}" class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 rounded bg-gray-100 dark:bg-gray-800 focus:outline-none" value="Fetching location...">
+                <input type="text" id="location_name" name="location_name" value="{{ form.location_name.value|default:'' }}" class="w-full px-4 py-2 border border-gray-300 dark:border-gray-700 rounded bg-gray-100 dark:bg-gray-800 focus:outline-none" value="Fetching location..." required>
                 {% for error in form.errors.location_name %}
                 <p class="text-sm text-red-500">{{ error }}</p>
                 {% endfor %}
