--- a/weather/static/css/css.css
+++ b/weather/static/css/css.css
@@ -11,3 +11,9 @@
         display: none;  /* Hide scrollbar for Chrome, Safari, and Edge */
     }
 }
+/*Use hyphens when breaking a word*/
+.break-with-hyphens {
+    word-break: break-all;
+    word-wrap: break-word;
+    hyphens: auto;
+}
