--- a/weather/templates/registration/login.html
+++ b/weather/templates/registration/login.html
@@ -30,7 +30,11 @@
         </form>
         <section class="flex justify-between mt-6">
             <a href="#" class="block text-center text-blue-500 hover:underline" target="_blank" title="Forgot Password?">Forgot Password?</a>
-            <a href="{% url 'get_onboard' %}"><button class="bg-gradient-to-r from-[#00557f] to-[#7f7fbe] p-2 text-orange-100 hover:text-cyan-100 hover:from-blue-600 hover:to-sky-800 rounded-md">Signup</button></a>
+            <a href="{% url 'get_onboard' %}">
+                <button class="bg-gradient-to-r from-blue-700 to-indigo-600 p-2 text-white font-semibold hover:from-blue-500 hover:to-indigo-500 hover:text-gray-100 transition-all duration-300 rounded-md shadow-md">
+                Signup
+                </button>
+            </a>
         </section>
     </div>
 </body>
